# fdns

./: .gitignore  .gitmodules  Makefile.in  PKGBUILD  README  README.md  RELNOTES  aclocal.m4  configure  configure.ac  filtercheck.sh  gcov.sh  mkasc.sh  mkdeb.sh
.github/workflows/: codeql.yml  codespell.yml
etc/: adblocker  bulkmailers  coinblocker  doh  fdns.service  fp-trackers  hosts  list.tld-blacklist  phishing  resolver.seccomp  servers  servers.local  tld-blacklist  trackers  usr.bin.fdns  worker.seccomp
etc/apparmor/: fdns-local  usr.bin.fdns
platform/arch/: PKGBUILD
platform/debian/: control.amd64  control.i386  copyright
platform/fedora/: disable-apparmor-git.patch  disable-apparmor.patch  fdns-git.spec  fdns-local.spec  fdns-stable.spec  fdns.spec  install-units-to-unitdir-git.patch  install-units-to-unitdir.patch  install-units-to-unitdir_stable.patch  mkrpm.sh
src/: common.mk.in
src/bash_completion/: fdns.bash_completion
src/cashpack/: Makefile.in  hpack.c  hpack_dec.c  hpack_enc.c  hpack_huf.c  hpack_int.c  hpack_tbl.c  hpack_val.c  hpiencode.c
src/dnsc/: Makefile  dedup.c  dnsc.h  main.c  rsort.c  subs.c  tld.c  whitelist.c
src/fdns/: Makefile  Makefile.in  cache.c  dns.c  dnsdb.c  dnsfilter.c  dnslint.c  dnslint.h  dnsserver.c  dot.c  fallback.c  fdns.h  filter.c  forwarder.c  frontend.c  h11.c  h2.c  h2.h  h2frame.h  hpack_static.c  hpack_static.h  huffman.c  lint.c  lint.h  log.c  main.c  monitor.c  net.c  procs.c  quic.c  resolver.c  restart.c  security.c  server.c  shmem.c  sni.c  ssl.c  stats.c  timetrace.c  timetrace.h  (+4 more)
src/fdnstress/: Makefile.in
src/inc/: dbg.h  gen.h  hpack.h  hpack_assert.h  hpack_huf_dec.h  hpack_huf_enc.h  hpack_priv.h
src/inc/tbl/: hpack_pseudo_headers.h  hpack_static.h  hpack_tbl.h
src/man/: dnsc.txt  fdns.txt  nxdomain.txt
src/nxdomain/: Makefile  Makefile.in  nxdomain  nxdomain.c  nxdomain.h  resolver.c  testme
src/tools/: listcleaner.c  nxdomain.c  privacybadger.c  servercnt.sh  wordpress.c
test/compile/: compile.sh
test/fdns/: 42l-wget.exp  all-interfaces.exp  already-running.exp  appliedprivacy.exp  blocklist-fdns-test  blocklist-file.exp  blocklist.exp  cleanbrowsing-family-wget.exp  cleanbrowsing-wget.exp  cloudflare-wget.exp  default-notfound-wget.exp  default-nslookup.exp  default-ping.exp  default-wget.exp  dotvsh2-config  dotvsh2.exp  fallback.exp  filter-doh.exp  filter.exp  forwarder.exp  help-man.exp  invalid-server.exp  ipv6.exp  keepalive.exp  list-adblocker.exp  list-all.exp  list-anycast.exp  list-family.exp  list-non-profit.exp  list-opennic.exp  list-security.exp  list.exp  list100-cache  local-doh.exp  monitor.exp  multiserver.exp  nofilter.exp  powerdns-wget.exp  print-requests.exp  protocol.exp  (+32 more)
test/src/fdnstress/: Makefile.in  main.c
test/src/ptest/: Makefile.in  main.c  stub.h
test/stress/: extract-dot.sh  extract-h2.sh  extract-keepalive.exp  extract.sh  extract.txt  list20  list500  test-dot.sh  test-keepalive-dot.exp  test-keepalive-dot.sh  test-keepalive-h2.sh  test-keepalive-list.sh  test-keepalive-tls.exp  test-keepalive.exp  test-query.exp  test-server.exp  test-tls.sh  test-user.sh  test.sh  wget.exp
